# Gazprom-test-task-May2024

./: README.md
gazpromtesttask/T-1/: file.csv  task_1.py
gazpromtesttask/T-2/: task_2.py
gazpromtesttask/T-3/: task_3.py
gazpromtesttask/T-4/: task_4.py
gazpromtesttask/T-5/: task_5.py
gazpromtesttask/T-6/: README.md  main.py  pyproject.toml
gazpromtesttask/T-6/logic/: helper.py
gazpromtesttask/T-6/models/: model.py
